--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 					</ul>
 				</div>
 			</div>
-			<div class="line"></div>
+			<!-- <div class="line"></div> -->
 			<div class="wrapper">
 				<div class="titles">
 					<h1>
-						Швидка доставка квітів<br />
+						Швидка доставка квітів<span><br /></span>
 						в будь-яке місце
 					</h1>
 					<p>
@@ -188,7 +188,7 @@
 				<h2><a href="#">Каталог</a></h2>
 				<div class="product_wrapper">
 					<div class="left_wrapper">
-						<div class="left_product">
+						<div class="left_product mobile">
 							<a href="#">
 								<picture>
 									<source
@@ -197,7 +197,7 @@
 									/>
 									<source
 										media="(min-width:320px)"
-										srcset="img/slides/flowers_2_m.jpg"
+										srcset="img/flowers_2_m.jpg"
 									/>
 									<img
 										src="img/flowers_4.jpg"
