--- a/index.html
+++ b/index.html
@@ -411,6 +411,10 @@
 										media="(min-width:320px)"
 										srcset="img/slides/girl_m.jpg"
 									/>
+										<source
+										media="(min-width:1181px)"
+										srcset="img/slides/girl_2.jpg"
+									/>
 									<img
 										src="img/slides/girl_2.jpg"
 										alt="flowers"
