--- a/index.html
+++ b/index.html
@@ -79,23 +79,7 @@
 				<div class="slider_wrapper">
 					<div class="slider">
 						<div class="slider__item filter">
-							<a href="#">
-								<picture>
-									<source
-										media="(min-width:766px)"
-										srcset="img/slides/flowers_1_t.jpg"
-									/>
-									<source
-										media="(min-width:320px)"
-										srcset="img/slides/flowers_1_m.jpg"
-									/>
-									<img
-										src="img/slides/flowers_1.jpg"
-										alt="flowers"
-										style="width: auto"
-									/>
-								</picture>
-							</a>
+							<img src="img/slides/flowers_1.jpg" alt="" />
 							<h4>
 								<a href="#"> Букет “Відкриття” </a>
 							</h4>
@@ -105,23 +89,7 @@
 							<a class="button button_size" href="#">В кошик</a>
 						</div>
 						<div class="slider__item">
-							<a href="#">
-								<picture>
-									<source
-										media="(min-width:766px)"
-										srcset="img/slides/flowers_2_t.jpg"
-									/>
-									<source
-										media="(min-width:320px)"
-										srcset="img/slides/flowers_1_m.jpg"
-									/>
-									<img
-										src="img/slides/flowers_2.jpg"
-										alt="flowers"
-										style="width: auto"
-									/>
-								</picture>
-							</a>
+							<img src="img/slides/flowers_2.jpg" alt="" />
 							<h4>
 								<a href="#"> Букет “Ніжність” </a>
 							</h4>
@@ -131,47 +99,17 @@
 							<a class="button button_size" href="#">В кошик</a>
 						</div>
 						<div class="slider__item filter">
-							<a href="#">
-								<picture>
-									<source
-										media="(min-width:766px)"
-										srcset="img/slides/flowers_1_t.jpg"
-									/>
-									<source
-										media="(min-width:320px)"
-										srcset="img/slides/flowers_1_m.jpg"
-									/>
-									<img
-										src="img/slides/flowers_1.jpg"
-										alt="flowers"
-										style="width: auto"
-									/>
-								</picture>
-							</a>
-							<h4><a href="#"> Букет “Відкриття” </a></h4>
+							<img src="img/slides/flowers_1.jpg" alt="" />
+							<h4>
+								<a href="#"> Букет “Відкриття” </a>
+							</h4>
 							<h3>
 								<a href="#"> 250 грн </a>
 							</h3>
 							<a class="button button_size" href="#">В кошик</a>
 						</div>
 						<div class="slider__item">
-							<a href="#">
-								<picture>
-									<source
-										media="(min-width:766px)"
-										srcset="img/slides/flowers_2_t.jpg"
-									/>
-									<source
-										media="(min-width:320px)"
-										srcset="img/slides/flowers_1_m.jpg"
-									/>
-									<img
-										src="img/slides/flowers_3.jpg"
-										alt="flowers"
-										style="width: auto"
-									/>
-								</picture>
-							</a>
+							<img src="img/slides/flowers_3.jpg" alt="" />
 							<h4>
 								<a href="#"> Букет “Спокій” </a>
 							</h4>
@@ -345,82 +283,34 @@
 					<div class="slider">
 						<div class="slider__item filter">
 							<a href="#">
-								<picture>
-									<source
-										media="(min-width:766px)"
-										srcset="img/slides/girl_t.jpg"
-									/>
-									<source
-										media="(min-width:320px)"
-										srcset="img/slides/girl_m.jpg"
-									/>
-									<img
-										src="img/slides/girl.jpg"
-										alt="flowers"
-										style="width: auto"
-									/>
-								</picture>
+								<img
+									src="img/slides/girl.jpg"
+									alt="flowers"
+									style="width: auto"
+								/>
 							</a>
 						</div>
 						<div class="slider__item">
 							<a href="#">
-								<picture>
-									<source
-										media="(min-width:766px)"
-										srcset="img/slides/bouquet_t.jpg"
-									/>
-									<source
-										media="(min-width:320px)"
-										srcset="img/slides/girl_m.jpg"
-									/>
-									<img
-										src="img/slides/bouquet.jpg"
-										alt="flowers"
-										style="width: auto"
-									/>
-								</picture>
+								<img
+									src="img/slides/bouquet.jpg"
+									alt="flowers"
+									style="width: auto"
+								/>
 							</a>
 						</div>
 						<div class="slider__item filter">
 							<a href="#">
-								<picture>
-									<source
-										media="(min-width:766px)"
-										srcset="img/slides/girl_t.jpg"
-									/>
-									<source
-										media="(min-width:320px)"
-										srcset="img/slides/girl_m.jpg"
-									/>
-									<img
-										src="img/slides/girl.jpg"
-										alt="flowers"
-										style="width: auto"
-									/>
-								</picture>
+								<img src="img/slides/girl.jpg" alt="girl" style="width: auto" />
 							</a>
 						</div>
 						<div class="slider__item">
 							<a href="#">
-								<picture>
-									<source
-										media="(min-width:766px)"
-										srcset="img/slides/bouquet_t.jpg"
-									/>
-									<source
-										media="(min-width:320px)"
-										srcset="img/slides/girl_m.jpg"
-									/>
-									<source
-										media="(min-width:1181px)"
-										srcset="img/slides/girl_2.jpg"
-									/>
-									<img
-										src="img/slides/girl_2.jpg"
-										alt="flowers"
-										style="width: auto"
-									/>
-								</picture>
+								<img
+									src="img/slides/girl_2.jpg"
+									alt="flowers"
+									style="width: auto"
+								/>
 							</a>
 						</div>
 					</div>
@@ -464,4 +354,4 @@
 		<script src="js/slick.min.js"></script>
 		<script src="js/script.js"></script>
 	</body>
-</html>
+</html>`
