--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
 				<div class="slider_wrapper">
 					<div class="slider">
 						<div class="slider__item filter">
-							<img src="img/slides/flowers_1.jpg" alt="" />
+							<a href="#">
+								<img src="img/slides/flowers_1.jpg" alt="" />
+							</a>
 							<h4>
 								<a href="#"> Букет “Відкриття” </a>
 							</h4>
@@ -89,7 +91,9 @@
 							<a class="button button_size" href="#">В кошик</a>
 						</div>
 						<div class="slider__item">
-							<img src="img/slides/flowers_2.jpg" alt="" />
+							<a href="#">
+								<img src="img/slides/flowers_2.jpg" alt="" />
+							</a>
 							<h4>
 								<a href="#"> Букет “Ніжність” </a>
 							</h4>
@@ -99,7 +103,9 @@
 							<a class="button button_size" href="#">В кошик</a>
 						</div>
 						<div class="slider__item filter">
-							<img src="img/slides/flowers_1.jpg" alt="" />
+							<a href="#">
+								<img src="img/slides/flowers_1.jpg" alt="" />
+							</a>
 							<h4>
 								<a href="#"> Букет “Відкриття” </a>
 							</h4>
@@ -109,7 +115,9 @@
 							<a class="button button_size" href="#">В кошик</a>
 						</div>
 						<div class="slider__item">
-							<img src="img/slides/flowers_3.jpg" alt="" />
+							<a href="#">
+								<img src="img/slides/flowers_3.jpg" alt="" />
+							</a>
 							<h4>
 								<a href="#"> Букет “Спокій” </a>
 							</h4>
@@ -354,4 +362,5 @@
 		<script src="js/slick.min.js"></script>
 		<script src="js/script.js"></script>
 	</body>
-</html>`
+</html>
+`
